# MosaicTheImage

./: CMakeLists.txt
include/: CanvasLabel.h  ImageWidget.h  MainWindow.h  MosaicTheImage.h  Tools.hpp
resources/: ImageView_.qrc  MosaicTheImage.qrc  MosaicTheImage.ui
src/: CanvasLabel.cpp  ImageWidget.cpp  MainWindow.cpp  MosaicTheImage.cpp  main.cpp
